# extraneous-activity-delays

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yaml
inputs/synthetic/: Confidential.bpmn  Confidential.json  Confidential_noTimers.bpmn  Confidential_noTimers.json  Insurance_Claims.bpmn  Insurance_Claims.json  Insurance_Claims_1_timer.bpmn  Insurance_Claims_1_timer.json  Insurance_Claims_3_timers.bpmn  Insurance_Claims_3_timers.json  Insurance_Claims_5_timers.bpmn  Insurance_Claims_5_timers.json  Insurance_Claims_5_timers_after.bpmn  Loan_Application.bpmn  Loan_Application.json  Loan_Application_1_timer.bpmn  Loan_Application_1_timer.json  Loan_Application_3_timers.bpmn  Loan_Application_3_timers.json  Loan_Application_5_timers.bpmn  Loan_Application_5_timers.json  Loan_Application_5_timers_after.bpmn  Pharmacy.bpmn  Pharmacy.json  Pharmacy_1_timer.bpmn  Pharmacy_1_timer.json  Pharmacy_3_timers.bpmn  Pharmacy_3_timers.json  Pharmacy_5_timers.bpmn  Pharmacy_5_timers.json  Pharmacy_5_timers_after.bpmn  Procure_to_Pay.bpmn  Procure_to_Pay.json  Procure_to_Pay_1_timer.bpmn  Procure_to_Pay_1_timer.json  Procure_to_Pay_3_timers.bpmn  Procure_to_Pay_3_timers.json  Procure_to_Pay_5_timers.bpmn  Procure_to_Pay_5_timers.json  (+1 more)
tests/: bpmn_enhancer_test.py  delay_discoverer_test.py  icpm-real-life-evaluation.py  icpm-synthetic-evaluation.py  infer_distribution_test.py  infsys-evaluation.py  infsys-preproc.py  infsys-real-life-evaluation.py  infsys-synthetic-before-after-evaluation.py  infsys-synthetic-complete-evaluation.py  infsys-synthetic-evaluation.py  infsys-synthetic-individual-evaluation.py  main.py  old_to_new_duration_distribution.py  real-life-evaluation.py  simple-running-example.py  synthetic-evaluation.py
(+54 files in other folders)
