[tool.poetry]
name = "extraneous-activity-delays"
version = "2.1.8"
description = ""
authors = ["David Chapela de la Campa <david.chapela.delacampa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
prosimos = { git = "https://github.com/AutomatedProcessImprovement/Prosimos.git", branch = "main" }
hyperopt = "^0.2.7"
lxml = "^4.9.2"
log-distance-measures = "^1.0.2"
start-time-estimator = "^1"
pix-framework = "^0.8.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

