[tool.poetry]
name = "extraneous-activity-delays"
version = "2.1.21"
description = ""
authors = ["David Chapela de la Campa <david.chapela.delacampa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
prosimos = "^2.0.0"
hyperopt = "^0.2.7"
lxml = "^4.9.2"
log-distance-measures = "^1.0.2"
pix-framework = "^0.13.0"

[tool.ruff]
line-length = 120

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
